--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../src/assets/css/style.css">
+  <link rel="stylesheet" href="./src/assets/css/style.css">
   <title>Gerador de CPF</title>
 </head>
 
@@ -16,7 +16,7 @@
     <div class="cpf-gerado"></div>
   </section>
 
-  <script src="./assets/js/bundle.js"></script>
+  <script src="./public/assets/js/bundle.js"></script>
 </body>
 
 </html>
